--- a/config/default_kabanero_config.yaml
+++ b/config/default_kabanero_config.yaml
@@ -1,20 +1,12 @@
 # Configuration for the default Kabanero stack hub
 name: Kabanero Stack Hub
 description: This is the default stack hub for Kabanero
-version: 0.9.0-rc.1
+version: 0.6.5
 stacks:
   - name: kabanero-stack-hub
     repos:
-      - url: https://github.com/kabanero-io/collections/releases/download/0.9.0-rc.1/java-spring-boot2-0.3.29-index.yaml
-      - url: https://github.com/kabanero-io/collections/releases/download/0.9.0-rc.1/nodejs-0.3.6-index.yaml
-      - url: https://github.com/kabanero-io/collections/releases/download/0.9.0-rc.1/nodejs-express-0.4.8-index.yaml
-      - url: https://github.com/appsody/stacks/releases/download/quarkus-v0.3.3/incubator-index.yaml
-        include: 
-          - quarkus
-      - url: https://github.com/appsody/stacks/releases/download/java-openliberty-v0.2.11/incubator-index.yaml
-        include: 
-          - java-openliberty
-image-org:
-image-registry:
-nginx-image-name:
+      - url: https://github.com/kabanero-io/collections/releases/download/0.6.5/java-openliberty-0.2.3-index.yaml
+image-org: 
+image-registry: 
+nginx-image-name: 
 
